------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.11 branch)

          See UPGRADE document for a list of incompatible changes.

------------------------------------------------------------------------------


Database
--------

* Add ability to have a NO_UPDATE field in SQL tables, which field will
  not affect a TIMESTAMP field (in MySQL or Postgres, at least).

  Intended to allow mod_time in user logins to be updated without
  changing a timestamp field. May have other uses, but is only
  honored at this time in the set_field() method, so has limited
  applicability.

  Assuming one has a timestamp field in the userdb table called
  "update_date", this is effected by changing the configuration as:

  	Database userdb  TIMESTAMP_FIELD  update_date
  	Database userdb  NO_UPDATE        mod_time

* Add ability to return after Preload and Autoload routines.
  Setting $Vend::PreloadReturn or $Vend::AutoloadReturn (i.e.
  they are defined) means Vend::Dispatch::dispatch() will 
  return that status. This allows features like QueryCache
  and others that are hooked via Preload or Autoload.

* Add skeleton module Vend::InDev, which does nothing but set a single
  global variable if the file _indev is present in $Global::VendRoot.
  This allows interchange.cfg bifurcation, useful when maintain a
  SCCS repository.

* Add valref and scratchref options to UserDB, allowing the admin
  user to put their stuff in someplace besides $Values. This would
  allow you to easily set $Values to customer or affiliate settings,
  without impacting the admin user.

  If you do:

  	  UserDB  ui  valref   user_record
	  UserTag uvalue Alias  data base=session key=

  you will then be able to reference the Admin "values" with

  	[uvalue name]

  The [if-mm] tag probably needs to be adjusted for this to work
  in the admin in real life.
